--- a/page2.html
+++ b/page2.html
@@ -5,8 +5,8 @@
 		<meta name="keywords" content="entreprise webdesign Lyon">
 		<meta name="description" content="L'agence La Panthère est une agence de webdesign qui aide les entreprises à devenir attractives et visibles sur internet.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+		<meta name="robots" content="index, follow">
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-		
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
@@ -28,7 +28,7 @@
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" /></a>
+							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo agence webdesign la panthere" height="40" /></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
@@ -39,9 +39,7 @@
 									<a href="index.html">Accueil</a>
 								</li>
 								<li>
-								</li>
-								<li>
-									<a href="page2.html">page2 &gt;</a>
+									<a href="page2.html">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -54,10 +52,10 @@
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-12">
-							<h1 class="text-center hero-bloc-text tc-white">
+							<h1 class="text-center hero-bloc-text">
 								Parlons web design !
 							</h1>
-							<p class="text-center mg-lg tc-white tight-width-whitespace">
+							<p class="text-center mg-lg tight-width-whitespace">
 								Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 								Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 							</p>
@@ -75,26 +73,23 @@
 							<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 								<div class="form-group">
 									<label>
-										Nom
+										Nom <input id="name" class="form-control" required />
 									</label>
-									<input id="name" class="form-control" required />
 								</div>
 								<div class="form-group">
 									<label>
-										Adresse email
+										Adresse email <input id="email" class="form-control" type="email" required />
 									</label>
-									<input id="email" class="form-control" type="email" required />
 								</div>
 								<div class="form-group">
 									<label>
-										Comment nous avez-vous connu ?
+										Comment nous avez-vous connu ?<input class="form-control" type="email" required id="input_504" />
 									</label>
-									<input class="form-control" type="email" required id="input_504" />
 								</div>
 								<div class="form-group">
 									<label>
-										Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-									</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+										Brief de votre projet (Ajoutez autant de détails que nécessaire)<br><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+									</label>
 								</div> 
 								<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 									Envoyer
@@ -110,9 +105,6 @@
 				</div>
 			</div>
 			<!-- bloc-7 END -->
-			<!-- ScrollToTop Button -->
-			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
-			<!-- ScrollToTop Button END-->
 			<!-- Footer - bloc-8 -->
 			<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 				<div class="container bloc-sm">
@@ -124,22 +116,22 @@
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+										<a class="social" href="https://twitter.com" title="lien twitter"><span class="fa fa-twitter icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+										<a class="social" href="https://fr-fr.facebook.com" title="lien facebook"><span class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+										<a class="social" href="https://dribbble.com" title="lien dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+										<a class="social" href="https://www.instagram.com" title="lien instagram"><span class="fa fa-instagram icon-md"></span></a>
 									</div>
 								</div>
 							</div>
