--- a/index.html
+++ b/index.html
@@ -7,18 +7,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<meta name="robots" content="index, follow">
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="style.min.css">
+		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 		
-
-		<script src="./js/jquery-2.1.0.js"></script>
-		<script src="./js/bootstrap.js"></script>
-		<script src="./js/blocs.js"></script>
-		<script src="./js/jquery.touchSwipe.js" defer></script>
-		<script src="./js/gmaps.js"></script>
-
 		<title>La Panthère - Entreprise de Webdesign à Lyon</title>	
 	</head>
 	<body>
@@ -27,10 +20,9 @@
 			<!-- bloc-0 -->
 			<header class="bloc bgc-white l-bloc " id="bloc-0">
 				<div class="container bloc-sm">
-
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo de l'agence, une tête de panthère, suivi de son nom" height="40" /></a>
+							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo de l'agence, une tête de panthère, suivi de son nom" height="40"></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
@@ -54,7 +46,7 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo de l'agence, une tête de panthère" />
+							<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Logo de l'agence, une tête de panthère">
 							<h1 class="text-center hero-bloc-text tc-white ">
 								Agence La Panthère
 							</h1>
@@ -68,7 +60,8 @@
 				<div class="container bloc-md">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<h2>L'agence La Panthère est une agence de webdesign qui aide les entreprises à devenir attractives et visibles sur internet.</h2>
+							<h2 class="mg-md text-center">
+								L'agence La Panthère est une agence de webdesign qui aide<br>les entreprises à devenir attractives et visibles sur internet.</h2>
 						</div>
 					</div>
 					<div class="row voffset-lg med-width-whitespace">
@@ -107,8 +100,8 @@
 						</div>
 					</div>
 					<div class="row voffset-lg voffset">
-						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-							<p>"L'agence La Panthère est une excellente agence web! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."<br>Maxime Guibard,PDG de À vos fourchettes</p>
+						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center citation">
+							<strong>"L'agence La Panthère est une excellente agence web!<br> Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.<br> Cela nous a aidé à doubler nos ventes en ligne à Lyon."</strong><br>Maxime Guibard, PDG de À vos fourchettes.
 						</div>
 					</div>
 				</div>
@@ -135,12 +128,12 @@
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<p>Nous travaillons avec beaucoup de clients, voici nos réalisations.</p>
+							<h2>Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
 						</div>
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Image de magasines colorés, superposés en cascades" class="img-responsive portfolio-thumb" /></a>
+							<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="Image de magasines colorés, superposés en cascades" class="img-responsive portfolio-thumb"></a>
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
 							</h3>
@@ -149,7 +142,7 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="photo d'une femme assise au sol regardant dans un téléobjectif" /></a>
+							<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="photo d'une femme assise au sol regardant dans un téléobjectif"></a>
 							<h3 class="mg-md text-center">
 								Création d'un site web pour photographes
 							</h3>
@@ -160,7 +153,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="photo de matériel informatique et de photographie"/></a>
+							<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb" alt="photo de matériel informatique et de photographie"></a>
 							<h3 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
 							</h3>
@@ -169,7 +162,7 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="Photo de deux personnes qui travaillent sur une table avec des accessoires" /></a>
+							<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb" alt="Photo de deux personnes qui travaillent sur une table avec des accessoires"></a>
 							<h3 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
 							</h3>
@@ -196,7 +189,7 @@
 			</div>
 			<!-- bloc-5-cta END -->
 			<!-- ScrollToTop Button -->
-			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+			<a href="#" title="flèche pour remonter en haut de la page" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 			<!-- ScrollToTop Button END-->
 			<!-- Footer - bloc-8 -->
 			<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
@@ -236,4 +229,9 @@
 		</div>
 		<!-- Principal conteneur END -->
 	</body>
+	<script defer src="./js/jquery-2.1.0.min.js"></script>
+		<script defer src="./js/bootstrap.min.js"></script>
+		<script defer src="./js/blocs.min.js"></script>
+		<script defer src="./js/jquery.touchSwipe.min.js" ></script>
+		<script defer src="./js/gmaps.min.js"></script>
 </html>
