--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
 		<meta name="robots" content="index, follow">
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 		
@@ -16,8 +16,8 @@
 		<script src="./js/jquery-2.1.0.min.js"></script>
 		<script src="./js/bootstrap.min.js"></script>
 		<script src="./js/blocs.min.js"></script>
-		<script src="./js/jqBootstrapValidation.js"></script>
-		<script src="./js/formHandler.js"></script>
+		<script src="./js/jqBootstrapValidation.min.js"></script>
+		<script src="./js/formHandler.min.js"></script>
 		<title>Contactez La Panthère - Entreprise de Webdesign à Lyon -</title>
 	</head>
 	<body>
@@ -28,7 +28,7 @@
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo agence webdesign la panthere" height="40" /></a>
+							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo de l'agence, une tête de panthère, suivi de son nom" height="40"></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
@@ -70,20 +70,20 @@
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-6">
-							<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+							<form id="form_1" novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 								<div class="form-group">
 									<label>
-										Nom <input id="name" class="form-control" required />
+										Nom <input id="name" class="form-control" required>
 									</label>
 								</div>
 								<div class="form-group">
 									<label>
-										Adresse email <input id="email" class="form-control" type="email" required />
+										Adresse email <input id="email" class="form-control" type="email" required>
 									</label>
 								</div>
 								<div class="form-group">
 									<label>
-										Comment nous avez-vous connu ?<input class="form-control" type="email" required id="input_504" />
+										Comment nous avez-vous connu ?<input class="form-control" type="text" required id="input_504">
 									</label>
 								</div>
 								<div class="form-group">
