--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 		<meta name="description" content="L'agence La Panthère est une agence de webdesign qui aide les entreprises à devenir attractives et visibles sur internet.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<meta name="robots" content="index, follow">
-		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="style.min.css">
-		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+		
+
+		<script defer src="./js/jquery-2.1.0.min.js"></script>
+		<script defer src="./js/bootstrap.min.js"></script>
+		<script defer src="./js/blocs.min.js"></script>
+		<script defer src="./js/jquery.touchSwipe.min.js" ></script>
+		<script defer src="./js/gmaps.min.js"></script>
 		
 		<title>La Panthère - Entreprise de Webdesign à Lyon</title>	
 	</head>
@@ -22,7 +24,7 @@
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo de l'agence, une tête de panthère, suivi de son nom" height="40"></a>
+							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="Logo de l'agence, une tête de panthère, suivi de son nom" height="40" width="217"></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
@@ -46,7 +48,7 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Logo de l'agence, une tête de panthère">
+							<img src="img/logo.webp" class="center-block image-resize-mode" width="100" height="100" alt="Logo de l'agence, une tête de panthère">
 							<h1 class="text-center hero-bloc-text tc-white ">
 								Agence La Panthère
 							</h1>
@@ -108,7 +110,7 @@
 			</main>
 			<!-- bloc-2-services END -->
 			<!-- bloc-3-what-i-do -->
-			<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+			<div class="bloc tc-white bgc-atomic-tangerine bg-presentation  d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace black-background">
 						<div class="col-sm-12">
@@ -229,9 +231,9 @@
 		</div>
 		<!-- Principal conteneur END -->
 	</body>
-	<script defer src="./js/jquery-2.1.0.min.js"></script>
-		<script defer src="./js/bootstrap.min.js"></script>
-		<script defer src="./js/blocs.min.js"></script>
-		<script defer src="./js/jquery.touchSwipe.min.js" ></script>
-		<script defer src="./js/gmaps.min.js"></script>
+	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="style.min.css">
+		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 </html>
