--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
 		<meta name="keywords" content="entreprise webdesign Lyon">
 		<meta name="description" content="L'agence La Panthère est une agence de webdesign qui aide les entreprises à devenir attractives et visibles sur internet.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-		<meta name="robots" content="index, follow">
-		
-
-		<script defer src="./js/jquery-2.1.0.min.js"></script>
-		<script defer src="./js/bootstrap.min.js"></script>
-		<script defer src="./js/blocs.min.js"></script>
-		<script defer src="./js/jquery.touchSwipe.min.js" ></script>
-		<script defer src="./js/gmaps.min.js"></script>
-		
+		<meta name="robots" content="index, follow">	
 		<title>La Panthère - Entreprise de Webdesign à Lyon</title>	
 	</head>
 	<body>
@@ -29,7 +21,7 @@
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
 						</div>
-						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">	
 							<ul class="site-navigation nav navbar-nav">
 								<li>
 									<a href="index.html">Accueil</a>
@@ -232,8 +224,14 @@
 		<!-- Principal conteneur END -->
 	</body>
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="style.min.css">
-		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="style.min.css">
+	<link rel="preload" fetchpriority="high" as="image" href="style.min.css" type="image/webp">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+	<script defer src="./js/jquery-2.1.0.js"></script>
+	<script defer src="./js/bootstrap.min.js"></script>
+	<script defer src="./js/blocs.min.js"></script>
+	<script defer src="./js/jquery.touchSwipe.min.js" ></script>
+	<script defer src="./js/gmaps.min.js"></script>
 </html>
