--- a/page2.html
+++ b/page2.html
@@ -12,11 +12,11 @@
 		<link rel="stylesheet" type="text/css" href="style.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-		<script src="./js/jquery-2.1.0.js"></script>
-		<script src="./js/bootstrap.min.js"></script>
-		<script src="./js/blocs.min.js"></script>
-		<script src="./js/jqBootstrapValidation.min.js"></script>
-		<script src="./js/formHandler.min.js"></script>
+		<script async src="./js/jquery-2.1.0.js"></script>
+		<script async src="./js/bootstrap.min.js"></script>
+		<script async src="./js/blocs.min.js"></script>
+		<script async src="./js/jqBootstrapValidation.min.js"></script>
+		<script async src="./js/formHandler.min.js"></script>
 	</head>
 	<body>
 		<!-- Principal conteneur -->
