--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="accueil.html">
+							<a class="navbar-brand" href="index.html">
 								<img src="img/agence-la-panthere-monochrome.svg" alt="Logo de l'agence, une tête de panthère, suivi de son nom">
 							</a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
@@ -38,7 +38,7 @@
 						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 							<ul class="site-navigation nav navbar-nav">
 								<li>
-									<a href="accueil.html">Accueil</a>
+									<a href="index.html">Accueil</a>
 								</li>
 								<li>
 									<a href="contact.html">Contact</a>
