--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href=".html">
-								<img src="img/agence-la-panthere-monochrome.svg" alt="Logo de l'agence, une tête de panthère, suivi de son nom" width="150" height="150">
+							<a class="navbar-brand" href="index.html">
+								<img src="img/agence-la-panthere-monochrome.svg" alt="Logo de l'agence, une tête de panthère, suivi de son nom">
 							</a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="icon-bar"></span>
