--- a/index.html
+++ b/index.html
@@ -228,28 +228,28 @@
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://twitter.com" title="lien twitter">
+										<a class="social" href="https://twitter.com" title="lien twitter" aria-label="logo twitter">
 											<span class="fa fa-twitter icon-md"></span>
 										</a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://fr-fr.facebook.com" title="lien facebook">
+										<a class="social" href="https://fr-fr.facebook.com" title="lien facebook" aria-label="logo facebook">
 											<span class="fa fa-facebook icon-md"></span>
 										</a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://dribbble.com" title="lien dribbble">
+										<a class="social" href="https://dribbble.com" title="lien dribbble" aria-label="logo dribbble">
 											<span class="fa fa-dribbble icon-md"></span>
 										</a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://www.instagram.com" title="lien instagram">
+										<a class="social" href="https://www.instagram.com" title="lien instagram" aria-label="logo instagram">
 											<span class="fa fa-instagram icon-md"></span>
 										</a>
 									</div>
