--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 							<a class="navbar-brand" href="index.html">
 								<img src="img/agence-la-panthere-monochrome.svg" alt="Logo de l'agence, une tête de panthère, suivi de son nom">
 							</a>
-							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" title="bouton du menu de navigation" data-toggle="collapse" data-target=".navbar-1">
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
