--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
-		<script rel="preload" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js" defer></script>
+		<script rel="preload" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.js" defer></script>
 		<script rel="preload" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" defer></script>
 		<script rel="preload" src="./js/blocs.min.js" defer></script>
 		<script rel="preload" src="https://cdnjs.cloudflare.com/ajax/libs/jqBootstrapValidation/1.3.6/jqBootstrapValidation.min.js" integrity="sha512-8ra8LdUYKLESfkw8lFRfgSPcTWPMxigbaesufKBOvpxgWHNCqIfN+4ucFsbXANar6Zq17zg5sJ8iw2vf+u6X9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
